<resources>
    <string name="app_name">GitHub Repositories</string>

    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="about_developer">About</string>
    <string name="any_suggestion">Any suggestion..</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="contribution_activity">Contribution activity</string>
    <string name="cheat_sheet">Cheat sheet</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="contributors">contributors</string>
    <string name="releases">releases</string>
    <string name="branch">branch</string>
    <string name="commits">commits</string>
    <string name="help">Help</string>
    <string name="share">Share</string>
    <string name="username_is_the_one_which_is_just_below_your_name">Username is the one which is just below your name</string>
</resources>
