<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProjectView">

    <include layout="@layout/toolbar_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_commits"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/commits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="0"
                android:textColor="#586069"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/commits"
                android:textColor="#586069"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_branch"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="#586069"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/branch"
                android:textColor="#586069"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_release"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/releases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="#586069"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/releases"
                android:textColor="#586069"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_contributor"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/contributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textColor="#586069"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/contributors"
                android:textColor="#586069"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:textColor="@color/white"
        android:text="@string/share"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projectViewRV"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
