<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_launcher_foreground"/>

            <TextView
                android:id="@+id/nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5dp"
                app:cardCornerRadius="@dimen/dimen_5dp"
                app:cardBackgroundColor="@color/backgroundColor"
                android:layout_marginStart="@dimen/dimen_10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:text="@string/followers"
                        android:textSize="10sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/dimen_5dp"
                android:layout_margin="@dimen/dimen_5dp"
                app:cardBackgroundColor="@color/backgroundColor"
                android:layout_marginStart="@dimen/dimen_10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:text="@string/following"
                        android:textSize="10sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contribution_activity"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="14sp"/>
        <ImageView
            android:id="@+id/graphView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="@dimen/dimen_10dp"
            android:orientation="vertical"
            android:adjustViewBounds="true"/>
    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/dimen_10dp"
            style="@style/CardView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:tint="@color/colorAccent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_cheat_sheet"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/dimen_16sp"
                    android:text="@string/cheat_sheet" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:tint="@color/colorAccent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_feedback"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/dimen_16sp"
                    android:text="@string/feedback" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:tint="@color/colorAccent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_rate_us"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/dimen_16sp"
                    android:text="@string/rate_us" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginStart="@dimen/dimen_20dp"
                android:layout_marginEnd="@dimen/dimen_20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_5dp"
                    android:tint="@color/colorAccent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_share"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:layout_marginEnd="@dimen/dimen_5dp"
                    android:layout_marginBottom="@dimen/dimen_5dp"
                    android:layout_gravity="center"
                    android:textSize="@dimen/dimen_16sp"
                    android:text="@string/share_app" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>-->

</LinearLayout>